src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>No_Of_Times_Auto_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Of Times Auto Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Days_Since_Last_Update__c</fullName>
        <formula>IF ( ISPICKVAL(Status__c, &apos;Active&apos;), TODAY() - Last_Updated_Date_Sales__c, NULL )</formula>
        <inlineHelpText>Number of days since Last Updated Date (Sales)</inlineHelpText>
        <label># of Days Since Last Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Floors__c</fullName>
        <label># of Floors</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Towers__c</fullName>
        <label># of Towers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outside_Geographic_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is outside the coverage area collected in Zonda.  Most of these comps will be from advisory and not targeted for monthly updates.</description>
        <label>Outside Geographic Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Location_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the system will NOT attempt to get City/County/State/ZIP from Google and the User needs to populate these themselves.</inlineHelpText>
        <label>Override Location Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Price_Reduction_Percent__c</fullName>
        <label>Price Reduction (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Reduction_USD__c</fullName>
        <label>Price Reduction ($)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prices_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you have verified that the Price information has NOT changed for this Project</inlineHelpText>
        <label>Prices Unchanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type_Advisory__c</fullName>
        <label>Product Type (Advisory)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family</fullName>
                    <default>true</default>
                    <label>Single Family</label>
                </value>
                <value>
                    <fullName>Townhomes</fullName>
                </value>
                <value>
                    <fullName>Stacked Flats</fullName>
                </value>
                <value>
                    <fullName>Attached</fullName>
                </value>
                <value>
                    <fullName>Cluster SFD</fullName>
                </value>
                <value>
                    <fullName>Detached Townhomes</fullName>
                </value>
                <value>
                    <fullName>Detached Condos</fullName>
                </value>
                <value>
                    <fullName>Small Lot SFD</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attached</fullName>
                </value>
                <value>
                    <fullName>Detached</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Characteristics__c</fullName>
        <label>Project Characteristics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Adult</fullName>
                </value>
                <value>
                    <fullName>Gated</fullName>
                </value>
                <value>
                    <fullName>High Rise (12+ Floors)</fullName>
                </value>
                <value>
                    <fullName>Mid-Rise (5-11 Floors)</fullName>
                </value>
                <value>
                    <fullName>Low Rise (1-4 Floors)</fullName>
                </value>
                <value>
                    <fullName>Affordable</fullName>
                </value>
                <value>
                    <fullName>Basement</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>LEED Certified</fullName>
                </value>
                <value>
                    <fullName>Mixed-Use</fullName>
                </value>
                <value>
                    <fullName>Ocean Views</fullName>
                </value>
                <value>
                    <fullName>Transit Oriented Development</fullName>
                </value>
                <value>
                    <fullName>Alley Load SFD</fullName>
                </value>
                <value>
                    <fullName>Carriage Homes</fullName>
                </value>
                <value>
                    <fullName>Cluster Detached</fullName>
                </value>
                <value>
                    <fullName>Condo Conversion</fullName>
                </value>
                <value>
                    <fullName>Condo Hotel</fullName>
                </value>
                <value>
                    <fullName>Condominiums</fullName>
                </value>
                <value>
                    <fullName>Detached Condo</fullName>
                </value>
                <value>
                    <fullName>Duplex/Duet</fullName>
                </value>
                <value>
                    <fullName>Elevator</fullName>
                </value>
                <value>
                    <fullName>Live-Work</fullName>
                </value>
                <value>
                    <fullName>Loft</fullName>
                </value>
                <value>
                    <fullName>Motorcourts</fullName>
                </value>
                <value>
                    <fullName>Multi-Builder Community</fullName>
                </value>
                <value>
                    <fullName>MultiGen</fullName>
                </value>
                <value>
                    <fullName>Net Zero Building</fullName>
                </value>
                <value>
                    <fullName>Paired Homes</fullName>
                </value>
                <value>
                    <fullName>Passive House Construction</fullName>
                </value>
                <value>
                    <fullName>Resort</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_ID_Legacy__c</fullName>
        <label>Project ID (Legacy)</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_with_Plans_Displayed__c</fullName>
        <formula>of_Plans_Displayed__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project with Plans Displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_with_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project with Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quick_Move_In_Incentives_Unchanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quick Move-In Incentives Unchanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quick_Move_In_Incentives__c</fullName>
        <label>Quick Move-In Incentives</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <label>Region ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Last_3_Months__c</fullName>
        <description>Used by Advisory to calculate 3 month sales rates</description>
        <inlineHelpText>Enter sales for last 3 months to allow system to calculate 3 month sales rate</inlineHelpText>
        <label>Net Sales (Last 3 Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Notes__c</fullName>
        <label>Sales Office Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Person_2__c</fullName>
        <label>Sales Person #2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Name__c</fullName>
        <label>Sales Person Name #1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rate_Difference_calc__c</fullName>
        <formula>IF (NOT(ISBLANK(Sales_Rate_calc__c)) &amp;&amp; NOT(ISBLANK(Sales_Rate_Last_3_Months_calc__c)), Sales_Rate_Last_3_Months_calc__c - Sales_Rate_calc__c, NULL)</formula>
        <label>Sales Rate Difference (calc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rate_Last_12_Months__c</fullName>
        <description>Used by Advisory to capture Sales Rate as reported by Project Contacts</description>
        <inlineHelpText>Enter typical monthly sales rate for past 12 months</inlineHelpText>
        <label>Sales Rate (Last 12 Months)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rate_Last_3_Months__c</fullName>
        <formula>IF( Open_Date__c &lt; TODAY()-90, Sales_Last_3_Months__c / 3, NULL)</formula>
        <label>Sales Rate (Last 3 Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rate_Last_3_Months_calc__c</fullName>
        <inlineHelpText>This is calculated by the system nightly based on Project Snapshot records</inlineHelpText>
        <label>Sales Rate Last 3 Months (calc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rate_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The sales pace is higher than anticipated but valid for this project.  Active adult communities or projects with numerous floorplans can have higher than average sales rates.</inlineHelpText>
        <label>Sales Rate Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rate__c</fullName>
        <label>Sales Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rate_calc__c</fullName>
        <formula>IF(
	IF(ISNULL(Open_Date__c) || ISNULL(Total_Units_Sold__c) || Total_Units_Sold__c = 0 || (Last_Updated_Date_Sales__c - Open_Date__c) &lt; 30, NULL,
		IF(ISNULL(Sold_Out_Date__c),(Total_Units_Sold__c/((Last_Updated_Date_Sales__c-Open_Date__c)/7))*4.3,(Total_Units_Sold__c/((Sold_Out_Date__c-Open_Date__c)/7))*4.3))&gt;=0,
	IF(ISNULL(Open_Date__c),0,
		IF(ISNULL(Sold_Out_Date__c),(Total_Units_Sold__c/((Last_Updated_Date_Sales__c-Open_Date__c)/7))*4.3,(Total_Units_Sold__c/((Sold_Out_Date__c-Open_Date__c)/7))*4.3)
		),
	NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rate (calc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you have verified that the Sales information has NOT changed for this Project</inlineHelpText>
        <label>Sales Unchanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_and_Marketing_Firm_LU__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This information will display in the project report</inlineHelpText>
        <label>Sales &amp; Marketing Firm</label>
        <referenceTo>Builder__c</referenceTo>
        <relationshipLabel>Projects (Sales and Marketing Firm)</relationshipLabel>
        <relationshipName>ProjectsSalesAndMarketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_and_Marketing_Firm_Name__c</fullName>
        <formula>Sales_and_Marketing_Firm_LU__r.Name</formula>
        <label>Sales &amp; Marketing Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_and_Marketing_Firm__c</fullName>
        <label>Sales and Marketing Firm</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_and_Marketing_Logo_URL_LU__c</fullName>
        <formula>Sales_and_Marketing_Firm_LU__r.Builder_Logo_URL__c</formula>
        <inlineHelpText>This information will display in the project report</inlineHelpText>
        <label>Sales &amp; Marketing Logo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_and_Marketing_Logo_URL__c</fullName>
        <label>Sales and Marketing Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Short_URL__c</fullName>
        <inlineHelpText>Automatically populated by code from Google</inlineHelpText>
        <label>Short URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Small_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Projects with five units or less being marketed by a smaller builder.</inlineHelpText>
        <label>Small Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_Out_Date__c</fullName>
        <label>Sold Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standing_Inventory__c</fullName>
        <label>Standing Inventory</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Matches__c</fullName>
        <formula>IF(NOT(ISBLANK(TEXT(State__c))), TEXT(State__c) == State_calc__c, TRUE)</formula>
        <label>State Matches?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State (legacy)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_calc__c</fullName>
        <inlineHelpText>Automatically populated from Google</inlineHelpText>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Sold Out</fullName>
                </value>
                <value>
                    <fullName>Upcoming</fullName>
                </value>
                <value>
                    <fullName>--Other--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_Plan_Prices__c</fullName>
        <description>Roll up summary of plan prices for average calculation</description>
        <label>Sum Plan Prices</label>
        <summarizedField>Plan__c.Price__c</summarizedField>
        <summaryFilterItems>
            <field>Plan__c.Display_in_Zonda__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Plan__c.Price__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Plan__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_Add_l_Mello_Roos_PCT__c</fullName>
        <label>Tax (Add&apos;l/Mello-Roos %)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Add_l_Mello_Roos_USD__c</fullName>
        <label>Tax (Add&apos;l/Mello-Roos $)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Base_Percent__c</fullName>
        <label>Tax (Base %)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Base_USD__c</fullName>
        <label>Tax (Base $)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>To_Be_Built_Incentives_Unchanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Built Incentives Unchanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Be_Built_Incentives__c</fullName>
        <label>To Be Built Incentives</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Remaining__c</fullName>
        <label>Total Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_calc__c</fullName>
        <formula>IF(ISBLANK(Total_Units_Planned__c), NULL, (Total_Units_Planned__c - IF(ISBLANK(Total_Units_Sold__c), 0, Total_Units_Sold__c)))</formula>
        <label>Total Remaining (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units_Planned__c</fullName>
        <label>Total Units Planned</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units_Released__c</fullName>
        <label>Total Units Released</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units_Sold__c</fullName>
        <label>Total Units Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Typical_Down_Payment__c</fullName>
        <label>Typical Down Payment (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Typical_Lot_Size__c</fullName>
        <label>Typical Lot Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Typical_Options_Upgrades_Percent__c</fullName>
        <label>Typical Options/Upgrades (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Typical_Options_Upgrades__c</fullName>
        <label>Typical Options/Upgrades ($)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Typical_Premiums_Percent__c</fullName>
        <label>Typical Premiums (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Typical_Premiums_USD__c</fullName>
        <label>Typical Premiums ($)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unavailable_from_Offshore__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>These are projects that offshore tried to get floor plans but were unsuccessful</inlineHelpText>
        <label>Unavailable from Offshore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Units_under_construction__c</fullName>
        <label># Units under construction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unsold_units_under_construction__c</fullName>
        <label># Unsold units under construction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Cycle_Days__c</fullName>
        <formula>IF (NOT(ISBLANK(TEXT(Update_Cycle__c)))  , VALUE( SUBSTITUTE(TEXT(Update_Cycle__c), &apos; Days&apos;, &apos;&apos;)  ), 30)</formula>
        <label>Update Cycle Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Cycle__c</fullName>
        <description>Update cycle needs to default to 0 for all new projects so they can be immediately reviewed.  The PUR flow will set the Update Cycle to 27.</description>
        <label>Update Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Village_Community__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Village</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Community__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Village</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Projects - Village</relationshipLabel>
        <relationshipName>Projects_Village</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WST_Notes__c</fullName>
        <label>Metrostudy WST Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webscrape_Id__c</fullName>
        <label>Webscrape Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Webscrape_URL__c</fullName>
        <label>Webscrape URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZIC_Date__c</fullName>
        <description>Date Project will be added to the ZIC site for review</description>
        <inlineHelpText>Date Project will be added to the ZIC site for review</inlineHelpText>
        <label>ZIC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZIP_Code__c</fullName>
        <label>ZIP Code (legacy)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_Code_calc__c</fullName>
        <inlineHelpText>Automatically populated from Google</inlineHelpText>
        <label>ZIP Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_Matches__c</fullName>
        <formula>IF(NOT(ISBLANK(ZIP_Code__c)), ZIP_Code__c == ZIP_Code_calc__c, TRUE)</formula>
        <label>ZIP Matches?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zonda_Project_Id__c</fullName>
        <formula>IF(NOT(ISBLANK(Project_ID_Legacy__c)), Project_ID_Legacy__c, Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zonda Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Plans_Displayed__c</fullName>
        <description>This is the number of Plans with Display in Zonda checked</description>
        <label># of Plans Displayed</label>
        <summaryFilterItems>
            <field>Plan__c.Display_in_Zonda__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Plan__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>unload_me__c</fullName>
        <defaultValue>false</defaultValue>
        <label>unload me</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Builder__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>City_calc__c</columns>
        <columns>County_calc__c</columns>
        <columns>State_calc__c</columns>
        <columns>ZIP_Code_calc__c</columns>
        <columns>Sales_Rate_calc__c</columns>
        <columns>Average_Price_calc__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Num_of_Days_Since_Last_Update__c</columns>
        <columns>DB_Project_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dallas</fullName>
        <columns>NAME</columns>
        <columns>Builder__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>City_calc__c</columns>
        <columns>State_calc__c</columns>
        <columns>ZIP_Code_calc__c</columns>
        <columns>Sales_Rate_calc__c</columns>
        <columns>Average_Price_calc__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Num_of_Days_Since_Last_Update__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>City_calc__c</field>
            <operation>equals</operation>
            <value>Dallas</value>
        </filters>
        <label>Dallas</label>
    </listViews>
    <listViews>
        <fullName>Projects_by_Owner</fullName>
        <columns>NAME</columns>
        <columns>Display_in_Zonda__c</columns>
        <columns>Status__c</columns>
        <columns>Data_User__c</columns>
        <columns>Update_Cycle__c</columns>
        <columns>ZIC_Date__c</columns>
        <columns>County_calc__c</columns>
        <columns>State_calc__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Projects by Owner</label>
    </listViews>
    <listViews>
        <fullName>Tustin</fullName>
        <columns>NAME</columns>
        <columns>Builder__c</columns>
        <columns>City__c</columns>
        <columns>Typical_Lot_Size__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>City_calc__c</field>
            <operation>equals</operation>
            <value>Tustin</value>
        </filters>
        <label>Tustin</label>
    </listViews>
    <listViews>
        <fullName>portland</fullName>
        <columns>NAME</columns>
        <columns>Builder__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>City_calc__c</columns>
        <columns>County_calc__c</columns>
        <columns>State_calc__c</columns>
        <columns>ZIP_Code_calc__c</columns>
        <columns>Sales_Rate_calc__c</columns>
        <columns>Average_Price_calc__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Num_of_Days_Since_Last_Update__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>City_calc__c</field>
            <operation>equals</operation>
            <value>Portland</value>
        </filters>
        <filters>
            <field>Display_in_Zonda__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Upcoming</value>
        </filters>
        <label>portland</label>
    </listViews>
</CustomObject>